# isssm

./: .gitignore  .pre-commit-config.yaml  99_optimization.html  Pipfile  README.md  cross_entropy_method.html  example_models.html  glssm.html  importance_sampling.html  index.html  justfile  kalman_filter_smoother.html  laplace_approximation.html  lcssm.html  makefile  maximum_likelihood_estimation.html  mode_estimation.html  modified_efficient_importance_sampling.html  pgssm.html  pyproject.toml  references.bib  robots.txt  search.json  settings.ini  sitemap.xml  typings.html  util.html
Models/: gaussian_models.html  pgssm.html  stsm.html
Testing/: analytical_verification.html
demonstrations/: nowcasting_hospitalizations.html
isssm/: _modidx.py  ce_method.py  estimation.py  glssm.py  glssm_models.py  importance_sampling.py  kalman.py  laplace_approximation.py  lcssm.py  mode_estimation.py  modified_efficient_importance_sampling.py  modified_efficient_importance_sampling\.py  optim.py  pgssm.py  typing.py  util.py
isssm/models/: glssm.py  pgssm.py  stsm.py
models/: gaussian_models.html  pgssm.html  stsm.html
nbs/: 00_glssm.ipynb  01_example_models.ipynb  10_kalman_filter_smoother.ipynb  20_lcssm.ipynb  20_pgssm.ipynb  30_laplace_approximation.ipynb  30_mode_estimation.ipynb  40_importance_sampling.ipynb  45_cross_entropy_method.ipynb  50_modified_efficient_importance_sampling.ipynb  60_maximum_likelihood_estimation.ipynb  99_optimization.ipynb  99_typings.ipynb  99_util.ipynb  _quarto.yml  index.ipynb  math.tex  meis.prof  nbdev.yml  references.bib  sidebar.yml
nbs/Models/: 00_gaussian_models.ipynb  10_stsm.ipynb  20_pgssm.ipynb
nbs/Testing/: 11_analytical_verification.ipynb
nbs/_testing/: 11_analytical_verification.ipynb
nbs/demonstrations/: 30_nowcasting_hospitalizations.ipynb
nbs/models/: 00_gaussian_models.ipynb  10_stsm.ipynb  20_pgssm.ipynb
nbs/testing/: 11_analytical_verification.ipynb
nbs_dev/: 40_importance_sampling.ipynb  45_cross_entropy_method.ipynb  50_modified_efficient_importance_sampling.ipynb  compare_me_eis.ipynb  prediction_drafts.ipynb  sqrt_filter_smoother.ipynb
src/: pyproject.toml
src/isssm/: _modidx.py  ce_method.py  estimation.py  glssm.py  importance_sampling.py  kalman.py  laplace_approximation.py  modified_efficient_importance_sampling.py  pgssm.py  typing.py  util.py
src/isssm/models/: glssm.py  pgssm.py  stsm.py
testing/: analytical_verification.html
