[build-system]
requires = ["setuptools>=42", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "isssm"
version = "0.0.1"
description = "Importance Sampling for State Space Models (in jax)"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Stefan Heyder", email = "stefan.heyder@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

dependencies = [
    "jax[cpu]",
    "jaxtyping",
    "numpy",
    "scipy",
    "tensorflow_probability",
    "jaxopt",
]

[project.optional-dependencies]
dev = [
    "matplotlib",
    "nbdev",
]

[project.urls]
"Homepage" = "https://github.com/stefanheyder/isssm"
"Bug Tracker" = "https://github.com/stefanheyder/isssm/issues"

[tool.setuptools]
packages = ["isssm"]

[tool.nbdev]
lib_path = "isssm"
nbs_path = "nbs"
doc_path = "_docs"
recursive = true
tst_flags = "notest"
put_version_in_init = true

[tool.uv]
python = "3.10"
